--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
   <script src="https://kit.fontawesome.com/00b1b5a652.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Alkatra:wght@400;600;700&family=Cabin:wght@600&family=Electrolize&family=Gothic+A1&family=Inter:wght@300;400;500;600&family=Josefin+Sans:wght@700&family=Montserrat:wght@400;800&family=Nerko+One&family=Orbitron:wght@400;500;600;700;800&family=Playfair+Display:wght@400;700&family=Poppins:wght@400;500;600&family=Roboto:wght@400;500;700&family=Ubuntu:wght@400;500&family=Work+Sans:wght@600&display=swap" rel="stylesheet">
-
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alkatra:wght@400;600;700&family=Cabin:wght@600&family=Electrolize&family=Gothic+A1&family=Inter:wght@300;400;500;600&family=Josefin+Sans:wght@700&family=Montserrat:wght@400;800&family=Nerko+One&family=Orbitron:wght@400;500;600;700;800&family=Playfair+Display:wght@400;700&family=Poppins:wght@400;500;600&family=Roboto:wght@400;500;700&family=Ubuntu:wght@400;500&family=Work+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
@@ -21,20 +20,34 @@
       <nav>
         <ul>
           <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="index.html">Shop</a></li>
-          <li><a href="index.html">About</a></li>
-          <li><a href="index.html">Contact</a></li>
+          <li><a href="#">Shop</a></li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
 
       <i class="fa-solid fa-bag-shopping"></i>
     </header>
     
+   <!-- section 1 -->
+   <section class="section1">
+    <img class="section1_image" src="photos/unsplash_dPUWzT5dqz8.png" alt="">
 
+    <div class="div_heading_box">
+      <h2>Bring Serenity to Your Place With Interior</h2>
+      <p class="section1_paragraph">find your dream plant for you home decoration with us, and we will make it happen.</p>
 
+      <div class="search_box">
+        <p class="search_box_title">Search Plant</p>
+        <i class="fa-solid fa-magnifying-glass"></i>
+    
+      </div>
 
+    </div>
 
+   </section>
 
+   
 
 
 
