--- a/index.html
+++ b/index.html
@@ -84,13 +84,29 @@
           
         </div>
 
-
-
-
-
       </div>
 
     </section>
+
+    <!-- section 3 -->
+  <section class="section3">
+    <h2 class="section2_heading">Interior Plant Reference</h2>
+    <div class="div_box_cards2">
+      <div class="card_livingroom">
+        <h2 class="living_room_text">
+          living room
+        </h2>
+        <img class="living_room_photo"src="photos/living1.png" alt="livingroom1">
+      
+      </div>
+      <div class="card_livingroom2">
+        <img class="living_room_photo2"src="photos/living2.png" alt="">
+        <img class="living_room_photo2" src="photos/living3.png" alt="">
+      </div>
+
+    </div>
+
+  </section>
 
 
 
