--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </ul>
       </nav>
 
-      <i class="fa-solid fa-bag-shopping"></i>
+     <a href="https://www.farfetch.com/ca/shopping/women/clothing-1/items.aspx" target="_blank"><i class="fa-solid fa-bag-shopping"></i></a> 
     </header>
     
    <!-- section 1 -->
@@ -108,7 +108,17 @@
 
   </section>
 
+    <footer>
+      <h2 class="footer_heading">Ready for a <span>Site visit ?</span></h2>
+      <p class="footer_paragarph">Lorem ipsum dolo elit Lorem ipsum dolo</p>
+      <div class="div_button"> 
+      <a href="https://www.youtube.com/shorts/mvU1P-B9ysU" target="_blank"><button class="view_now_button">
+        View Now
+      </button></a>
+    </div>
+    </footer>
 
+    
 
 
   </div>
